--- a/resources/html/class.html
+++ b/resources/html/class.html
@@ -6,7 +6,8 @@
             color: ${class-color};
             background-color: ${class-background-color};">
             <center>
-                ${name}
+                ${stereotype}
+                <div>${name}</div>
             </center>
         </div>
         ${enums}
