--- a/resources/html/class.html
+++ b/resources/html/class.html
@@ -1,8 +1,8 @@
 <html>
-<body style="padding: 8px -4px 8px -4px;
-    font-size: 10px; font-weight: bold; font-family: EB Garamond, serif;">
+<body style="padding: 8 -4 8 -4;
+    font-size: 10; font-weight: bold; font-family: EB Garamond, serif;">
     <div>
-        <div style="font-size: 16px; padding: 4px; padding-right: 14px;
+        <div style="font-size: 16; padding: 4; padding-right: 14;
             color: ${class-color};
             background-color: ${class-background-color};">
             <center>
