--- a/resources/html/divider.html
+++ b/resources/html/divider.html
@@ -1,3 +1,3 @@
-<div style="font-size: 1px; height: 1px; padding: 12px 0px 0px 0px;"></div>
-<div style="font-size: 1px; height: 1px; background-color: gray; margin: 0px; padding: 0px; border-width: 0px;"></div>
-<div style="font-size: 1px; height: 1px; padding: 12px 0px 0px 0px;"></div>
+<div style="font-size: 1; height: 1; padding: 12 0 0 0;"></div>
+<div style="font-size: 1; height: 1; background-color: gray; margin: 0; padding: 0; border-width: 0;"></div>
+<div style="font-size: 1; height: 1; padding: 12 0 0 0;"></div>
