--- a/resources/html/property.html
+++ b/resources/html/property.html
@@ -1,5 +1,5 @@
 <div>
-    <div style="font-size: 12px; padding: 4px 16px 4px 16px;
+    <div style="font-size: 12; padding: 4 16 4 16;
             color: ${property-color};
             background-color: ${property-background-color};">
         ${content}
