--- a/resources/html/class.html
+++ b/resources/html/class.html
@@ -1,5 +1,5 @@
 <html>
-<body style="padding: 8 -4 8 -4;
+<body style="padding: 8 -4 8 -4; width: 400;
     font-size: 10; font-weight: bold; font-family: EB Garamond, serif;">
     <div>
         <div style="font-size: 16; padding: 4; padding-right: 14;
