partial support for generics

--- a/resources/html/property.html
+++ b/resources/html/property.html
@@ -3,5 +3,6 @@
             color: ${property-color};
             background-color: ${property-background-color};">
         ${content}
+        ${stereotypes}
     </div>
 </div>
