--- a/resources/html/class.html
+++ b/resources/html/class.html
@@ -7,6 +7,7 @@
             background-color: ${class-background-color};">
             <center>
                 ${stereotype}
+                ${type-params}
                 <div>${name}</div>
             </center>
         </div>
