fixed stereotypes for enum

--- a/resources/html/class.html
+++ b/resources/html/class.html
@@ -6,7 +6,7 @@
             color: ${class-color};
             background-color: ${class-background-color};">
             <center>
-                ${stereotype}
+                ${stereotypes}
                 ${type-params}
                 <div>${name}</div>
             </center>
